--- a/results.html
+++ b/results.html
@@ -98,7 +98,7 @@
     <div class="max-w-7xl mx-auto px-6 py-8">
         <div class="lg:grid lg:grid-cols-4 gap-8">
             <!-- Sidebar Controls -->
-            <aside id="sidebar-controls" class="lg:col-span-1 space-y-6 hidden-view">
+            <aside id="sidebar-controls" class="lg:col-span-1 space-y-6">
                 <div class="bg-white rounded-2xl border border-gray-200 p-6 shadow-sm">
                     <h3 class="text-lg font-bold text-gray-900 mb-4">Your Funds</h3>
                     <div class="space-y-4">
@@ -175,7 +175,7 @@
     </aside>
 
     <!-- Main Content Area -->
-    <div id="main-content-area" class="lg:col-span-4">
+    <div id="main-content-area" class="lg:col-span-3">
         <!-- Single Result View -->
         <main id="single-result-view" class="space-y-8 hidden-view">
             <h1 id="single-title" class="text-4xl md:text-5xl font-bold text-center text-gray-900 mb-8">Your
@@ -413,10 +413,13 @@
                 const month = (currentDate.getMonth() + 1).toString().padStart(2, '0');
                 const year = currentDate.getFullYear().toString().slice(-2);
 
+                const semester = Math.floor(i / 6) + 1;
+                const semesterLabel = `Sem ${semester}`;
+
                 if (i === currentMonthIndex) {
-                    labels.push('Current Month');
+                    labels.push(['Current', semesterLabel]);
                 } else {
-                    labels.push(`${month}/${year}`);
+                    labels.push([`${month}/${year}`, semesterLabel]);
                 }
 
                 let monthlyExpense = monthlyLiving;
@@ -672,6 +675,7 @@
             const scholarshipsA = parseFloat(params.get('scholarships')) || 5000;
 
             if (simType === 'single') {
+                // Ensure correct classes for single view (default)
                 document.getElementById('sidebar-controls').classList.remove('hidden-view');
                 document.getElementById('main-content-area').classList.remove('lg:col-span-4');
                 document.getElementById('main-content-area').classList.add('lg:col-span-3');
