--- a/simulator.html
+++ b/simulator.html
@@ -29,128 +29,6 @@
             background-clip: text;
         }
 
-        .gradient-bg {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-        }
-
-        .card-selectable {
-            border: 2px solid #e5e7eb;
-            padding: 1rem;
-            /* Reduced from 1.5rem */
-            text-align: center;
-            cursor: pointer;
-            border-radius: 0.75rem;
-            /* Reduced from 1rem */
-            transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
-            /* Smoother easing */
-            background: white;
-        }
-
-        .card-selectable:hover {
-            border-color: #667eea;
-            transform: translateY(-4px);
-            /* Increased from -2px for more impact */
-            box-shadow: 0 10px 25px rgba(102, 126, 234, 0.15);
-            /* Slightly stronger */
-        }
-
-        .card-selectable.selected {
-            border-color: #667eea;
-            border-width: 3px;
-            /* Thicker border for selected state */
-            background: linear-gradient(135deg, #667eea15 0%, #764ba215 100%);
-            box-shadow: 0 4px 12px rgba(102, 126, 234, 0.2);
-        }
-
-        .search-dropdown {
-            max-height: 400px;
-            overflow-y: auto;
-            border: 1px solid rgba(229, 231, 235, 0.5);
-            /* Semi-transparent */
-            border-top: none;
-            position: absolute;
-            width: 100%;
-            background: rgba(255, 255, 255, 0.95);
-            /* Glassmorphism */
-            backdrop-filter: blur(12px) saturate(180%);
-            -webkit-backdrop-filter: blur(12px) saturate(180%);
-            z-index: 10;
-            border-radius: 0 0 0.75rem 0.75rem;
-            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
-        }
-
-        .search-result {
-            border-bottom: 1px solid #f3f4f6;
-            padding: 0.875rem 1rem;
-            /* Reduced from 1rem */
-            cursor: pointer;
-            transition: background 0.15s cubic-bezier(0.4, 0, 0.2, 1);
-            /* Faster */
-        }
-
-        .search-result:hover {
-            background-color: #f9fafb;
-        }
-
-        .selected-program {
-            border: 3px solid #667eea;
-            /* Thicker border */
-            padding: 1.25rem;
-            /* Reduced from 1.5rem */
-            background: linear-gradient(135deg, #667eea10 0%, #764ba210 100%);
-            position: relative;
-            border-radius: 0.75rem;
-            /* Reduced from 1rem */
-        }
-
-        .remove-program {
-            position: absolute;
-            top: 0.75rem;
-            right: 0.75rem;
-            cursor: pointer;
-            color: #ef4444;
-            font-weight: bold;
-            font-size: 1.5rem;
-            width: 2rem;
-            height: 2rem;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            border-radius: 50%;
-            transition: all 0.2s;
-        }
-
-        .remove-program:hover {
-            background: #fee2e2;
-            transform: scale(1.1);
-            /* Micro-animation */
-        }
-
-        .step-indicator {
-            font-size: 0.875rem;
-            /* Reduced from 1rem */
-            font-weight: 600;
-            color: #9ca3af;
-            position: relative;
-            padding: 0.5rem 1rem;
-            transition: color 0.2s;
-        }
-
-        .step-indicator.active {
-            color: #667eea;
-        }
-
-        .step-indicator.active::after {
-            content: '';
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            height: 3px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            border-radius: 3px 3px 0 0;
-        }
-
         input[type="text"],
         input[type="number"] {
             border: 2px solid #e5e7eb;
@@ -343,7 +221,9 @@
                         class="w-full pl-12 pr-4 py-4 text-lg border-2 border-gray-200 rounded-xl focus:border-indigo-600 focus:ring-2 focus:ring-indigo-100 transition-all"
                         placeholder="Try 'Harvard MBA' or 'IE Business School'..." autocomplete="off"
                         oninput="intelligentSearch(this.value)">
-                    <div id="search-results" class="search-dropdown hidden"></div>
+                    <div id="search-results"
+                        class="max-h-96 overflow-y-auto border border-gray-200 border-t-0 absolute w-full bg-white/95 backdrop-blur-md z-10 rounded-b-lg shadow-lg hidden">
+                    </div>
                 </div>
                 <p class="text-sm text-gray-500 mt-2">Search by university name, program, or both</p>
             </div>
@@ -594,10 +474,11 @@
                     resultsDiv.innerHTML = '<div class="search-result p-4 text-center text-gray-500">No programs found</div>';
                 } else {
                     resultsDiv.innerHTML = matches.map(item => `
-                        <div class="search-result" onclick="selectProgram('${item.name.replace(/'/g, "\\'")}', '${item.program.replace(/'/g, "\\'")}', '${item.country}', '${item.countryName}', ${item.tuition}, ${item.duration}, ${item.livingCost})">
-                            <div class="font-bold text-gray-900">${item.name}</div>
+                        <div class="border-b border-gray-100 px-4 py-3 cursor-pointer hover:bg-gray-50 transition-all"
+                             onclick="selectProgram('${item.name.replace(/'/g, "\\'")}', '${item.program.replace(/'/g, "\\'")}', '${item.country}', '${item.countryName}', ${item.tuition}, ${item.duration}, ${item.livingCost})">
+                            <div class="font-semibold text-gray-900">${item.name}</div>
                             <div class="text-sm text-gray-600">${item.program} - ${item.countryName}</div>
-                            <div class="text-sm text-indigo-600 font-semibold mt-1">$${item.tuition.toLocaleString()} • ${item.duration} months</div>
+                            <div class="text-sm font-bold text-indigo-600 mt-1">$${item.tuition.toLocaleString()} • ${item.duration} months</div>
                         </div>
                     `).join('');
                 }
@@ -1080,17 +961,17 @@
                         <span id="lifestyle-comparison" class="font-semibold text-green-600">Within budget</span>
                     </div>
                     <div class="mt-4 flex gap-2 justify-center flex-wrap">
-                        <button onclick="setLifestylePreset('frugal')"
-                            class="px-4 py-2 bg-gray-100 hover:bg-gray-200 rounded-lg text-sm font-semibold transition-all">
-                            🎒 Frugal ($900)
+                        <button onclick="setLifestylePreset(900, this)"
+                            class="bg-white border-2 border-gray-200 text-gray-700 px-4 py-3 rounded-lg font-medium hover:border-indigo-500 hover:bg-indigo-50 transition-all">
+                            Frugal - $900/mo
                         </button>
-                        <button onclick="setLifestylePreset('balanced')"
-                            class="px-4 py-2 bg-indigo-100 hover:bg-indigo-200 text-indigo-700 rounded-lg text-sm font-semibold transition-all">
-                            ☕ Balanced ($1,400)
+                        <button onclick="setLifestylePreset(1400, this)"
+                            class="bg-white border-2 border-gray-200 text-gray-700 px-4 py-3 rounded-lg font-medium hover:border-indigo-500 hover:bg-indigo-50 transition-all">
+                            Balanced - $1,400/mo
                         </button>
-                        <button onclick="setLifestylePreset('comfortable')"
-                            class="px-4 py-2 bg-gray-100 hover:bg-gray-200 rounded-lg text-sm font-semibold transition-all">
-                            🍽️ Comfortable ($2,100)
+                        <button onclick="setLifestylePreset(2100, this)"
+                            class="bg-white border-2 border-gray-200 text-gray-700 px-4 py-3 rounded-lg font-medium hover:border-indigo-500 hover:bg-indigo-50 transition-all">
+                            Comfortable - $2,100/mo
                         </button>
                     </div>
                 </div>
@@ -1107,15 +988,15 @@
                     <label class="block text-sm font-semibold text-gray-700 mb-4">Will you maintain your salary from
                         your home country?</label>
                     <div class="grid grid-cols-2 gap-4">
-                        <div class="card-selectable" onclick="selectSalary('yes', this)">
-                            <div class="text-3xl mb-2 text-green-600 font-bold">✓</div>
-                            <div class="font-semibold text-gray-900">Yes</div>
-                            <p class="text-sm text-gray-600 mt-1">Continue earning</p>
+                        <div onclick="selectSalary('yes', this)"
+                            class="bg-white border-2 border-gray-200 rounded-lg p-6 text-center cursor-pointer hover:border-indigo-500 hover:bg-indigo-50 transition-all">
+                            <div class="text-lg font-semibold text-gray-900">Yes</div>
+                            <div class="text-sm text-gray-500 mt-1">I'll have income</div>
                         </div>
-                        <div class="card-selectable selected" onclick="selectSalary('no', this)">
-                            <div class="text-3xl mb-2">✗</div>
-                            <div class="font-semibold text-gray-900">No</div>
-                            <p class="text-sm text-gray-600 mt-1">No home salary</p>
+                        <div onclick="selectSalary('no', this)"
+                            class="bg-white border-2 border-indigo-500 rounded-lg p-6 text-center cursor-pointer hover:border-indigo-500 hover:bg-indigo-50 transition-all bg-indigo-50">
+                            <div class="text-lg font-semibold text-gray-900">No</div>
+                            <div class="text-sm text-gray-500 mt-1">No income during studies</div>
                         </div>
                     </div>
                 </div>
@@ -1130,15 +1011,15 @@
                     <label class="block text-sm font-semibold text-gray-700 mb-4">Will you have an on-campus
                         job?</label>
                     <div class="grid grid-cols-2 gap-4">
-                        <div class="card-selectable" onclick="selectOnCampus('yes', this)">
-                            <div class="text-3xl mb-2 text-green-600 font-bold">✓</div>
-                            <div class="font-semibold text-gray-900">Yes</div>
-                            <p class="text-sm text-gray-600 mt-1">Work on campus</p>
+                        <div onclick="selectOnCampus('yes', this)"
+                            class="bg-white border-2 border-gray-200 rounded-lg p-6 text-center cursor-pointer hover:border-indigo-500 hover:bg-indigo-50 transition-all">
+                            <div class="text-lg font-semibold text-gray-900">Yes</div>
+                            <div class="text-sm text-gray-500 mt-1">I'll work on campus</div>
                         </div>
-                        <div class="card-selectable selected" onclick="selectOnCampus('no', this)">
-                            <div class="text-3xl mb-2">✗</div>
-                            <div class="font-semibold text-gray-900">No</div>
-                            <p class="text-sm text-gray-600 mt-1">No on-campus job</p>
+                        <div onclick="selectOnCampus('no', this)"
+                            class="bg-white border-2 border-indigo-500 rounded-lg p-6 text-center cursor-pointer hover:border-indigo-500 hover:bg-indigo-50 transition-all bg-indigo-50">
+                            <div class="text-lg font-semibold text-gray-900">No</div>
+                            <div class="text-sm text-gray-500 mt-1">No on-campus job</div>
                         </div>
                     </div>
                 </div>
@@ -1160,25 +1041,33 @@
             window.selectedOnCampus = 'no';
 
             function selectSalary(type, element) {
-                const salarySection = element.closest('section').querySelector('.grid');
+                const salarySection = element.closest('.grid'); // Target the grid containing the cards
                 if (salarySection) {
-                    salarySection.querySelectorAll('.card-selectable').forEach(card => {
-                        card.classList.remove('selected');
+                    // Remove selected state from all cards
+                    salarySection.querySelectorAll('[onclick^="selectSalary"]').forEach(card => {
+                        card.classList.remove('border-indigo-500', 'bg-indigo-50');
+                        card.classList.add('border-gray-200');
                     });
                 }
-                element.classList.add('selected');
+                // Add selected state to clicked card
+                element.classList.remove('border-gray-200');
+                element.classList.add('border-indigo-500', 'bg-indigo-50');
                 window.selectedSalary = type;
                 document.getElementById('salary-amount-group').classList.toggle('hidden', type !== 'yes');
             }
 
             function selectOnCampus(type, element) {
-                const oncampusSection = element.closest('section').querySelectorAll('.grid')[1];
+                const oncampusSection = element.closest('.grid'); // Target the grid containing the cards
                 if (oncampusSection) {
-                    oncampusSection.querySelectorAll('.card-selectable').forEach(card => {
-                        card.classList.remove('selected');
+                    // Remove selected state from all cards
+                    oncampusSection.querySelectorAll('[onclick^="selectOnCampus"]').forEach(card => {
+                        card.classList.remove('border-indigo-500', 'bg-indigo-50');
+                        card.classList.add('border-gray-200');
                     });
                 }
-                element.classList.add('selected');
+                // Add selected state to clicked card
+                element.classList.remove('border-gray-200');
+                element.classList.add('border-indigo-500', 'bg-indigo-50');
                 window.selectedOnCampus = type;
                 document.getElementById('oncampus-details-group').classList.toggle('hidden', type !== 'yes');
             }
