--- a/simulator.html
+++ b/simulator.html
@@ -204,11 +204,16 @@
 
 
         <!-- Step 1: Programs -->
-        <section id="step-1" class="bg-white rounded-2xl border border-gray-200 p-5 mb-4 shadow-sm">
-            <h2 class="text-2xl font-bold text-gray-900 mb-6">Step 1: Find Your Program</h2>
+        <section id="step-1" class="bg-white rounded-xl border border-gray-200 p-8 mb-4 shadow-sm">
+            <div class="flex justify-between items-start mb-6">
+                <div>
+                    <h2 class="text-2xl font-bold text-gray-900 mb-2">Step 1: Find Your Program</h2>
+                    <p class="text-sm text-gray-500">Search from 2,800+ programs across 450+ universities worldwide</p>
+                </div>
+            </div>
 
             <!-- Single Intelligent Search Bar -->
-            <div class="mb-4">
+            <div class="mb-6">
                 <label class="block text-sm font-semibold text-gray-700 mb-3">Search for university or program</label>
                 <div class="relative">
                     <div class="absolute inset-y-0 left-0 pl-4 flex items-center pointer-events-none">
@@ -218,28 +223,34 @@
                         </svg>
                     </div>
                     <input type="text" id="intelligent-search"
-                        class="w-full pl-12 pr-4 py-4 text-lg border-2 border-gray-200 rounded-xl focus:border-indigo-600 focus:ring-2 focus:ring-indigo-100 transition-all"
+                        class="w-full pl-12 pr-4 py-4 text-base border-2 border-gray-200 rounded-lg focus:border-indigo-500 focus:ring-4 focus:ring-indigo-100 transition-all"
                         placeholder="Try 'Harvard MBA' or 'IE Business School'..." autocomplete="off"
                         oninput="intelligentSearch(this.value)">
                     <div id="search-results"
                         class="max-h-96 overflow-y-auto border border-gray-200 border-t-0 absolute w-full bg-white/95 backdrop-blur-md z-10 rounded-b-lg shadow-lg hidden">
                     </div>
                 </div>
-                <p class="text-sm text-gray-500 mt-2">Search by university name, program, or both</p>
+                <p class="text-xs text-gray-500 mt-2">Search by university name, program, or both</p>
             </div>
 
             <!-- Selected Programs -->
-            <div id="selectedPrograms" class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-4"></div>
+            <div id="selectedPrograms" class="grid grid-cols-1 gap-4 mb-6"></div>
 
             <!-- Smart Recommendations (shows after first program selected) -->
             <div id="smart-recommendations"
-                class="hidden mt-6 bg-gradient-to-br from-purple-50 to-pink-50 rounded-2xl border-2 border-purple-200 p-6">
+                class="hidden mt-6 bg-gradient-to-br from-indigo-50 to-purple-50 rounded-xl border border-indigo-200 p-6">
                 <h3 class="text-lg font-bold text-gray-900 mb-3">Students like you also considered...</h3>
                 <div id="recommendations-list" class="grid grid-cols-1 md:grid-cols-3 gap-4"></div>
             </div>
 
-            <p id="emptyState" class="text-center text-gray-500 py-8 border-2 border-dashed border-gray-200 rounded-xl">
-                Start typing to search for programs
+            <p id="emptyState"
+                class="text-center text-gray-500 py-12 border-2 border-dashed border-gray-200 rounded-lg">
+                <svg class="w-12 h-12 mx-auto mb-3 text-gray-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
+                </svg>
+                <span class="block font-medium text-gray-700 mb-1">Start your search</span>
+                <span class="block text-sm">Type a university name or program to begin</span>
             </p>
         </section>
 
@@ -714,30 +725,58 @@
                     return;
                 }
 
-                let html = window.selectedPrograms.map((program, index) => `
-        <div class="selected-program relative bg-white rounded-xl border-2 border-indigo-100 p-6 shadow-sm hover:shadow-md transition-all">
-            <button class="absolute top-2 right-2 text-gray-400 hover:text-red-500 font-bold p-1" onclick="removeProgram(${index})">×</button>
-            <div class="font-bold text-lg text-gray-900 mb-1 pr-6">${program.name}</div>
-            <div class="text-sm text-gray-600 mb-2">${program.location}</div>
-            <div class="flex justify-between items-center mt-3 pt-3 border-t border-gray-100">
-                <span class="font-bold text-indigo-600 text-lg">${program.tuition}</span>
-                <span class="text-sm text-gray-500 bg-gray-100 px-2 py-1 rounded-md">${program.duration}</span>
+                let html = window.selectedPrograms.map((program, index) => {
+                    // Calculate total 2-year cost estimate
+                    const totalCost = (program.tuitionNum + (program.livingCost * program.durationNum)).toLocaleString();
+                    const avgSalary = Math.floor(program.tuitionNum * 1.8).toLocaleString(); // Rough estimate
+
+                    return `
+        <div class="relative bg-white rounded-lg border-2 border-gray-200 p-6 hover:border-indigo-300 hover:shadow-md transition-all">
+            <button class="absolute top-4 right-4 text-gray-400 hover:text-red-500 hover:bg-red-50 rounded-full w-8 h-8 flex items-center justify-center transition-all" onclick="removeProgram(${index})">×</button>
+            
+            <div class="flex justify-between items-start mb-4 pr-8">
+                <div class="flex-1">
+                    <div class="flex items-center gap-2 mb-2">
+                        <span class="inline-block px-2 py-1 bg-indigo-100 text-indigo-700 text-xs font-semibold rounded">Top Program</span>
+                    </div>
+                    <h3 class="text-lg font-bold text-gray-900 mb-1">${program.name}</h3>
+                    <p class="text-sm text-gray-600">${program.program} • ${program.location}</p>
+                </div>
+                <div class="text-right">
+                    <div class="text-2xl font-bold text-gray-900">$${totalCost}</div>
+                    <div class="text-xs text-gray-500">Total ${program.durationNum}-mo cost</div>
+                </div>
             </div>
-            <div class="text-xs text-gray-400 mt-2 uppercase tracking-wide font-semibold">${program.program}</div>
+            
+            <div class="grid grid-cols-3 gap-4 pt-4 border-t border-gray-100">
+                <div>
+                    <div class="text-xs text-gray-500 uppercase tracking-wide font-medium mb-1">Duration</div>
+                    <div class="text-sm font-semibold text-gray-900">${program.durationNum} months</div>
+                </div>
+                <div>
+                    <div class="text-xs text-gray-500 uppercase tracking-wide font-medium mb-1">Tuition</div>
+                    <div class="text-sm font-semibold text-gray-900">$${program.tuitionNum.toLocaleString()}</div>
+                </div>
+                <div>
+                    <div class="text-xs text-gray-500 uppercase tracking-wide font-medium mb-1">Avg Salary</div>
+                    <div class="text-sm font-semibold text-emerald-600">$${avgSalary}</div>
+                </div>
+            </div>
         </div>
-        `).join('');
+        `;
+                }).join('');
 
                 // Add "Add Comparison" card if only 1 program selected
                 if (window.selectedPrograms.length === 1) {
                     html += `
-                        <div class="selected-program border-2 border-dashed border-gray-300 rounded-xl p-6 flex flex-col items-center justify-center text-center cursor-pointer hover:border-indigo-500 hover:bg-indigo-50 transition-all group" onclick="resetSearchFields(); document.getElementById('search-university-input').focus(); document.getElementById('search-university-input').scrollIntoView({behavior: 'smooth', block: 'center'});">
+                        <div class="border-2 border-dashed border-gray-300 rounded-lg p-8 flex flex-col items-center justify-center text-center cursor-pointer hover:border-indigo-500 hover:bg-indigo-50 transition-all group" onclick="document.getElementById('intelligent-search').focus(); document.getElementById('intelligent-search').scrollIntoView({behavior: 'smooth', block: 'center'});">
                             <div class="w-12 h-12 rounded-full bg-gray-100 group-hover:bg-indigo-100 flex items-center justify-center mb-3 transition-colors">
                                 <svg class="w-6 h-6 text-gray-400 group-hover:text-indigo-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"></path>
                                 </svg>
                             </div>
-                            <h3 class="font-semibold text-gray-900 group-hover:text-indigo-700">Add Program to Compare</h3>
-                            <p class="text-xs text-gray-500 mt-1">Select another program above</p>
+                            <h3 class="font-semibold text-gray-900 group-hover:text-indigo-700 mb-1">Add Program to Compare</h3>
+                            <p class="text-xs text-gray-500">Search for another program above</p>
                         </div>
                     `;
                 }
